--- a/package.json
+++ b/package.json
@@ -1,11 +1,9 @@
 {
   "dependencies": {
-    "child_process": "^1.0.2",
-    "discord-music-player": "^8.3.1",
-    "discord.js": "^12.5.3",
-    "dotenv": "^10.0.0",
-    "ffprobe": "^1.1.2",
-    "ffprobe-static": "^3.0.0",
-    "readline": "^1.3.0"
+    "@keyv/postgres": "^1.3.2",
+    "discord.js": "^14.5.0",
+    "dotenv": "^16.0.3",
+    "moment": "^2.29.4",
+    "pg": "^8.8.0"
   }
 }
